style.css
body {
	font-family: sans-serif;
}

.error {
	width: 100%;
	font-size: 14pt;
	color: red;
}

.controls_div     {
	position: relative;
	width: 100%;
	height: 30px;
	overflow: hidden; 
}

.inputPane {
	float: left;
	width: 37%;
	border: none;
	margin-right: 10px;
}

.inputPane textarea {
	width: 100%;
	border: 1px solid;
	border-color: #eeeeee;
	background-color: #eeeeee;
	font-size: 11pt;
}

.outputPane {
	float: left;
	width: 60%;
	text-align: center;
	font-size: 11pt;
}

.left {
	float: left;
}

.left-50 {
	float: left;
	position: relative;
	left: -50px;
	top: 0px;
    margin-right: -50px;
}

.right {
	float: right;
}

.button {
	font-size: 11pt;
	margin: 5px 2px 5px 2px;
	width: 50px;
}

.get_input  {
	margin-top: 5px;
	width: 50%;
	height: 70%;
}


/*.file_input_button  {
	width: 80px;
	top: 0px;
    border: 1px solid #F0F0EE;
    padding: 2px 8px 2px 8px; 
    font-weight: bold; 
    height: 25px; 
    margin: 0px; 
    margin-right: 5px; 
}*/

.file_input  {
	width: 50px;
	height: 25px;
	cursor: pointer;
    opacity: 0;filter:alpha(opacity=0);-ms-filter:"alpha(opacity=0)";-khtml-opacity:0;-moz-opacity:0; 
}

